# kramerav

./: .envrc  .gitignore  .tool-versions  README.md  pyproject.toml  requirements_dev.txt
requirements/: development.txt
script/: setup
src/kesslerav/: __init__.py  media_switch.py
src/kesslerav/protocol2k/: __init__.py  io.py  media_switch.py
src/kramerav/: __init__.py  hdmi_switch.py  protocol2k.py
src/kramerav/protocol2000/: __init__.py  commands.py
tests/: protocol2k_test.py  test_hdmi_switcher.py
