[project]
name = "kramerav"
version = "0.0.2"
authors = [
  { name = "Kevin Rohrbaugh", email="code@rhrbgh.com" },
]
description = "API for controlling a Kramer HDMI switch using Protocol 2000"
keywords = ["home assistant", "home automation", "kramer", "hdmi", "video"]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/krohrbaugh/kramerav"
"Bug Tracker" = "https://github.com/krohrbaugh/kramerav/issues"

[build-system]
requires = [
  "hatchling>=1.20.0",
]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib"
]
minversion = "8.0"
pythonpath = "./src"
testpaths = [
  "tests",
]
